--- a/assets/css/swiper-custom.css
+++ b/assets/css/swiper-custom.css
@@ -55,10 +55,13 @@ swiper-container::part(button-next) {
     
 }
 
+
 .slider{
   position: relative;
   padding:60px 0px; 
 }
+
+
 .custom-button-next,.custom-button-prev{
   position: absolute;
   top: var(--swiper-navigation-top-offset, 48%);
@@ -144,6 +147,8 @@ swiper-container::part(button-next) {
 }
 
 
+/* Testimonials */
+
   .slider .slider-caption {
     text-align: center;
   }
@@ -187,4 +192,93 @@ swiper-container::part(button-next) {
   .slider .testimonial-slide .logo-wrap img{
     width: 100%;
     height: auto;
+  }
+
+
+  /* articles related */
+
+
+  .related-slider .slider-caption h3 {
+    text-align: right;
+  }
+
+  .related-slider .article-item__img-wrap{
+
+    max-height: 183px;
+  }
+  .related-slider .article-item__img-wrap img{ 
+    width:100%;
+    height: 100%;
+    object-fit:cover;
+  }
+
+  .related-slider .custom-button-prev,   .related-slider .custom-button-next{
+    top:0px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    border:1px solid #949494;
+    color: #666;
+    border-radius: 8px;
+    max-width: 35px;
+  }
+
+  .related-slider .custom-button-next .icon-svg, .related-slider .custom-button-prev .icon-svg{
+    color: #666;
+    position: static;
+    width:18px;
+    height: 14px;
+  }
+
+  .related-slider  .swiper-button-disabled{
+    border-color: #afafaf78;
+   
+  }
+  .related-slider  .swiper-button-disabled .icon-svg{
+    color: #afafaf;
+  }
+
+
+  .related-slider .custom-button-next{
+     left:0;
+  }
+
+  .related-slider .custom-button-prev{
+    left:55px;
+    right:auto;
+   
+  }
+
+
+  .related-slider swiper-container::part(container){
+    padding:0px;
+  }
+
+  .related-slider .wrapper{
+    padding:0px;
+  }
+
+  .related-slider .article-item__category{
+    color: #404040;
+    font-size: 14px;
+    font-weight: 400;
+    margin:10px 0px;
+    transition:.25s;
+  }
+
+  .related-slider .article-item__title{
+    color: #404040;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 26px;
+    transition:.25s;
+  }
+
+  .related-slider .article-item__category:hover , .related-slider .article-item__title:hover{
+    opacity:0.7;
+  }
+  a{
+    color:inherit;
   }
