--- a/assets/css/swiper-custom.css
+++ b/assets/css/swiper-custom.css
@@ -59,7 +59,10 @@ swiper-container::part(button-next) {
 .slider{
   position: relative;
   padding:60px 0px; 
-  font-family: 'Rubik-Regular';
+}
+
+.slider .wrapper{
+  position: relative;
 }
 
 
