changes in styles + minification

--- a/assets/css/swiper-custom.css
+++ b/assets/css/swiper-custom.css
@@ -1,285 +1,1 @@
-/* swiper-container {
-    --swiper-theme-color: #ababab;
-    --swiper-navigation-size: 22px;
-    --swiper-navigation-color: #e1e1e1;
-    --swiper-navigation-top-offset: 10px;
-    --swiper-navigation-sides-offset: 10px;
-    --swiper-pagination-color: #92a4ae;
-    --swiper-pagination-bullet-border-radius: 6px;
-    --swiper-pagination-bullet-horizontal-gap: 4px;
-    --swiper-pagination-bullet-vertical-gap: 4px;
-    --swiper-pagination-bullet-size: 6px;
-    --swiper-pagination-bullet-width: 6px;
-    --swiper-pagination-bullet-height: 6px;
-    --swiper-pagination-bullet-opacity: 1;
-    --swiper-pagination-bullet-inactive-color: #254a5d;
-    --swiper-pagination-bullet-inactive-opacity: 1;
-    --swiper-pagination-bottom: 0rem;
-    --swiper-preloader-color: var(--swiper-theme-color);
-} */
-
-
-swiper-container {
-       
-}
-
-swiper-container::part(container) {
- padding-bottom:40px; 
-}
-swiper-container::part(bullet) {
-
-}
-
-swiper-container::part(bullet-active) {
-  background:rgba(0, 0, 0);
-}
-
-swiper-container::part(pagination) {
-  
-}
-
-
-
-
-swiper-slide {
-  height: auto;
-}
-
-
-swiper-container::part(container) {
-    /* styles */
-}
-
-swiper-container::part(button-prev),
-swiper-container::part(button-next) {
-    
-}
-
-
-.slider{
-  position: relative;
-  padding:60px 0px; 
-}
-
-.slider .wrapper{
-  position: relative;
-}
-
-
-.custom-button-next,.custom-button-prev{
-  position: absolute;
-  top: var(--swiper-navigation-top-offset, 48%);
-  max-width: 70px;
-  width: 100%;
-  height: 55px;
-  margin-top: calc(0px -(var(--swiper-navigation-size) / 2));
-  z-index: 10;
-  cursor: pointer;
-  
-}
-
-.custom-button-next:hover,.custom-button-prev:hover {
-   opacity: 0.7;
-}
-
-.custom-button-next,.custom-button-prev{
-  background:#000;
-}
-
-.custom-button-next .icon-svg, .custom-button-prev .icon-svg{
-  color:#fff;
-
-  width:30px;
-  height: 24px;
-  position: absolute;
-  z-index:15;
-  top: 15px;
-  left: 20px;
-  transition: .25s;
-
-
-}
-
-.custom-button-next .icon-svg{
-  transform: rotateY(180deg);
-  left:15px;
-}
-
-
-.custom-button-prev .background-svg,.custom-button-next .background-svg{
-  position:relative;
-  color:#fff;
-  z-index:10;
-  transition:.25s;
-}
-
-.custom-button-prev{
-  right: var(--swiper-navigation-sides-offset, -35px);
-  left: auto;
-}
-
-.custom-button-next{
-  left: var(--swiper-navigation-sides-offset, -35px);
-  right: auto;
-}
-
-@media screen and (max-width:1290px){
-
-
-  .slider .wrapper{
-    padding: 0px 70px;
-  }
-  .custom-button-prev{
-    right: var(--swiper-navigation-sides-offset, 0px);
-  }
-
-  .custom-button-next{
-    left: var(--swiper-navigation-sides-offset, 0px);
-  }
-}
-
-
-.slider-footer-img{
-  position: absolute;
-  bottom: -1px;
-  z-index:20; 
-
-}
-
-.slider-footer-img img {
-  display: block; /* Prevents default inline spacing of images */
-}
-
-
-/* Testimonials */
-
-  .slider .slider-caption {
-    text-align: center;
-  }
-  .slider .slider-caption h3{
-    font-size: 32px;
-    font-weight: 700;
-    margin-bottom: 20px;
-  }
-  .slider .slider-caption p{
-     font-size: 18px;
-    margin-bottom: 20px;
-  }
- .slider .testimonial-slide{
-    height: 100%;
-    padding:30px;
-    display: flex;
-    flex-direction: column;
-
-  }
-
-   .slider .testimonial-slide .quote{
-    font-weight: 400;
-    font-size: 20px;
-    min-height: 180px;
-    margin:20px 0px;
-   }  
-
-   .slider .testimonial-slide .rating{
-    margin-bottom: 20px;
-    margin-top: auto;
-   }
-
-   .slider .testimonial-slide .name{
-    font-weight: 600;
-   }
-
-  .slider .testimonial-slide .logo-wrap{
-    max-width: 120px;
-  }
-
-  .slider .testimonial-slide .logo-wrap img{
-    width: 100%;
-    height: auto;
-  }
-
-
-  /* articles related */
-
-
-  .related-slider .slider-caption h3 {
-    text-align: right;
-  }
-
-  .related-slider .article-item__img-wrap{
-    overflow: hidden;
-    max-height: 183px;
-  }
-  .related-slider .article-item__img-wrap img{ 
-    width:100%;
-    height: 100%;
-    object-fit:cover;
-  }
-
-  .related-slider .custom-button-prev,   .related-slider .custom-button-next{
-    top:0px;
-    height: 35px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #fff;
-    border:1px solid #949494;
-    color: #666;
-    border-radius: 8px;
-    max-width: 35px;
-  }
-
-  .related-slider .custom-button-next .icon-svg, .related-slider .custom-button-prev .icon-svg{
-    color: #666;
-    position: static;
-    width:18px;
-    height: 14px;
-  }
-
-  .related-slider  .swiper-button-disabled{
-    border-color: #afafaf78;
-   
-  }
-  .related-slider  .swiper-button-disabled .icon-svg{
-    color: #afafaf;
-  }
-
-
-  .related-slider .custom-button-next{
-     left:0;
-  }
-
-  .related-slider .custom-button-prev{
-    left:55px;
-    right:auto;
-   
-  }
-
-
-  .related-slider swiper-container::part(container){
-    padding:0px;
-  }
-
-  .related-slider .article-item__category{
-    color: #404040;
-    font-size: 14px;
-    font-weight: 400;
-    margin:10px 0px;
-    transition:.25s;
-  }
-
-  .related-slider .article-item__title{
-    color: #404040;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 26px;
-    transition:.25s;
-    margin:20px 0px;
-  }
-
-  .related-slider .article-item__category:hover , .related-slider .article-item__title:hover{
-    opacity:0.7;
-  }
-  a{
-    color:inherit;
-  }
+.slider,.slider .wrapper{position:relative}.custom-button-next:hover,.custom-button-prev:hover,.related-slider .article-item__category:hover,.related-slider .article-item__title:hover{opacity:.7}swiper-container::part(container){padding-bottom:40px}swiper-container::part(bullet-active){background:rgba(0,0,0)}swiper-slide{height:auto}.slider{padding:60px 0}.custom-button-next,.custom-button-prev{position:absolute;top:var(--swiper-navigation-top-offset,48%);max-width:70px;width:100%;height:55px;margin-top:calc(0px - (var(--swiper-navigation-size)/ 2));z-index:10;cursor:pointer;background:#000}.custom-button-next .icon-svg,.custom-button-prev .icon-svg{color:#fff;width:30px;height:24px;position:absolute;z-index:15;top:15px;left:20px;transition:.25s}.custom-button-next .icon-svg{transform:rotateY(180deg);left:15px}.custom-button-next .background-svg,.custom-button-prev .background-svg{position:relative;color:#fff;z-index:10;transition:.25s}.custom-button-prev{right:var(--swiper-navigation-sides-offset,-35px);left:auto}.custom-button-next{left:var(--swiper-navigation-sides-offset,-35px);right:auto}@media screen and (max-width:1290px){.slider .wrapper{padding:0 70px}.custom-button-prev{right:var(--swiper-navigation-sides-offset,0)}.custom-button-next{left:var(--swiper-navigation-sides-offset,0)}}.slider-footer-img{position:absolute;bottom:-1px;z-index:20}.slider-footer-img img{display:block}.slider .slider-caption{text-align:center}.slider .slider-caption h3{font-size:32px;font-weight:700;margin-bottom:20px}.slider .slider-caption p{font-size:18px;margin-bottom:20px}.slider .testimonial-slide{height:100%;padding:30px;display:flex;flex-direction:column}.slider .testimonial-slide .quote{font-weight:400;font-size:20px;min-height:180px;margin:20px 0}.slider .testimonial-slide .rating{margin-bottom:20px;margin-top:auto}.slider .testimonial-slide .name{font-weight:600}.slider .testimonial-slide .logo-wrap{max-width:120px}.slider .testimonial-slide .logo-wrap img{width:100%;height:auto}.related-slider .slider-caption h3{text-align:right}.related-slider .article-item__img-wrap{overflow:hidden;max-height:183px}.related-slider .article-item__img-wrap img{width:100%;height:100%;object-fit:cover}.related-slider .custom-button-next,.related-slider .custom-button-prev{top:0;height:35px;display:flex;align-items:center;justify-content:center;background:#fff;border:1px solid #949494;color:#666;border-radius:8px;max-width:35px}.related-slider .custom-button-next .icon-svg,.related-slider .custom-button-prev .icon-svg{color:#666;position:static;width:18px;height:14px}.related-slider .swiper-button-disabled{border-color:#afafaf78}.related-slider .swiper-button-disabled .icon-svg{color:#afafaf}.related-slider .custom-button-next{left:20px}.related-slider .custom-button-prev{left:75px;right:auto}.related-slider swiper-container::part(container){padding:0}.related-slider .article-item__category{color:#404040;font-size:14px;font-weight:400;margin:10px 0;transition:.25s}.related-slider .article-item__title{color:#404040;font-size:18px;font-weight:600;line-height:26px;transition:.25s;margin:20px 0}.related-slider .article-item__title a{color:#404040!important}a{color:inherit}
